# astra

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  astro.config.mjs  index.html  package-lock.json  package.json
.claude/agents/: cross-platform.md  feature-suggestion.md  terminal-review.md
.github/workflows/: cmake-multi-platform.yml  deploy.yml  release.yml
cmake/: mingw-w64-x86_64.cmake
docs/: formulas.md  known_bugs.md  poi_reference.md  quest_system_analysis.md  roadmap.md  world_lore_generation.md
docs/ideas/: interactive_shelves.md
docs/plans/: 2026-04-18-stage4-hostility-event-bus.md  2026-04-20-faction-ownership-kickoff-prompt.md  2026-04-20-system-faction-ownership-plan.md  2026-04-20-system-faction-ownership-spec.md  2026-04-21-archive-dungeon-migration-kickoff.md  2026-04-21-dungeon-generator-factory.md  2026-04-21-dungeon-generator-overhaul-kickoff.md  2026-04-21-npc-ranged-attacks.md  animation_system.md  character_creation.md  character_stats_and_screen.md  faction_standing.md  fullscreen_trade_window.md  game_refactor.md  light_source_fov.md  map_editor.md  nova-stellar-signal-gap-analysis.md  overhaul_detail_map_poi_stamps.md  quest_system.md  scenario_graph_vision.md  ship_system_and_tutorial.md  spawn_npcs_settlements_outposts.md  stellar_signal_phase4_5_gaps.md  wayfinding_skills.md  widget_panel.md  zone_grid.md
docs/reports/: semantic-rendering-migration.md
docs/superpowers/plans/: 2026-03-31-semantic-rendering-decorations.md  2026-03-31-semantic-rendering-fixtures.md  2026-03-31-semantic-rendering-foundation.md  2026-03-31-semantic-rendering-items.md  2026-03-31-semantic-rendering-npcs.md  2026-03-31-semantic-rendering-tiles.md  2026-03-31-semantic-ui-foundation.md  2026-03-31-semantic-ui-render-play.md  2026-04-04-minimap.md  2026-04-04-world-lore-phase1.md  2026-04-06-detail-map-overhaul-phase1.md  2026-04-06-terrain-shaping-from-lore.md  2026-04-07-detail-map-gen-v2-phase1.md  2026-04-07-detail-map-gen-v2-phase2.md  2026-04-07-furniture-and-npcs.md  2026-04-07-settlement-poi-phase6.md  2026-04-08-flora-mineral-fixtures.md  2026-04-08-phase7-v2-integration.md  2026-04-08-ruins-poi-v2.md  2026-04-08-ruins-poi.md  2026-04-09-mountains-biome.md  2026-04-13-quest-chains.md  (+26 more)
ideas/: character-creation.md  character-ref.md  combat_extensions.md  dual_wield_ranged.md  items_v2.md  menu.md  minimap_traditional_style.md  skill_implementation.md  starship_mechanics.md  tinkering.md
include/astra/: ability.h  ability_bar.h  action.h  animation.h  aura.h  aura_grant.h  aura_system.h  biome_profile.h  body_presets.h  boot_sequence.h  bsp_generator.h  building_generator.h  cave_entrance_generator.h  cave_entrance_types.h  celestial_body.h  character.h  character_creation.h  character_screen.h  civ_aesthetics.h  combat_system.h  crashed_ship_generator.h  crashed_ship_types.h  creature_flags.h  debug_spawn.h  dev_console.h  dialog_manager.h  dice.h  display_name.h  dungeon_level_generator.h  dungeon_recipe.h  edge_strip.h  effect.h  event_bus.h  exterior_decorator.h  faction.h  faction_map.h  faction_territory.h  fov.h  galaxy_map_desc.h  galaxy_sim.h  (+85 more)
include/crawler/: game.h  options.h  renderer.h  sdl_renderer.h  terminal_renderer.h
plans/: overhaul_detail_map_poi_stamps.md  time_of_day_wait_system.md
src/: ability.cpp  ability_bar.cpp  animation.cpp  aura.cpp  aura_system.cpp  body_presets.cpp  boot_sequence.cpp  celestial_body.cpp  character.cpp  character_creation.cpp  character_screen.cpp  content.config.ts  debug_spawn.cpp  dev_console.cpp  dialog_manager.cpp  dice.cpp  display_name.cpp  effect.cpp  event_bus.cpp  faction.cpp  fov.cpp  galaxy_sim.cpp  game.cpp  game_combat.cpp  game_dialog.cpp  game_help.cpp  game_input.cpp  game_interaction.cpp  game_rendering.cpp  game_world.cpp  help_screen.cpp  input_manager.cpp  item.cpp  item_defs.cpp  item_gen.cpp  journal.cpp  lore_generator.cpp  lore_influence_map.cpp  lore_viewer.cpp  main.cpp  (+48 more)
src/dungeon/: backdrop.cpp  conclave_archive.cpp  connectivity.cpp  decoration.cpp  fixtures.cpp  layout.cpp  overlay.cpp  pipeline.cpp  puzzles.cpp  style_configs.cpp
src/generators/: biome_profiles.cpp  bsp_generator.cpp  building_generator.cpp  cave_entrance_generator.cpp  cave_generator.cpp  civ_styles.cpp  cold_rocky_overworld_generator.cpp  crashed_ship_generator.cpp  default_overworld_generator.cpp  derelict_station_generator.cpp  detail_map_generator.cpp  detail_map_generator_v2.cpp  dungeon_level.cpp  edge_strip.cpp  elevation_strategies.cpp  exterior_decorator.cpp  faction_territory.cpp  flora_strategies.cpp  furniture_palettes.cpp  hub_station_generator.cpp  infested_station_generator.cpp  moisture_strategies.cpp  open_cave_generator.cpp  outpost_planner.cpp  overworld_generator.cpp  overworld_generator_base.cpp  path_router.cpp  perimeter_builder.cpp  pirate_station_generator.cpp  placement_scorer.cpp  poi_phase.cpp  poi_placement.cpp  room_identifier.cpp  ruin_civ_configs.cpp  ruin_decay.cpp  ruin_generator.cpp  ruin_stamps.cpp  scarred_overworld_generator.cpp  scav_station_generator.cpp  settlement_planner.cpp  (+6 more)
src/layouts/: NewsPost.astro
src/npcs/: archon_automaton.cpp  archon_remnant.cpp  archon_sentinel.cpp  archon_sentry_drone.cpp  black_market_vendor.cpp  civilian.cpp  conclave_sentry.cpp  conclave_sentry_drone.cpp  drifter.cpp  heavy_conclave_sentry.cpp  hub_npcs.cpp  keeper_personas.cpp  merchant.cpp  nova.cpp  pirate_captain.cpp  pirate_grunt.cpp  prospector.cpp  rust_hound.cpp  scav_keeper.cpp  scav_merchant.cpp  scavenger.cpp  sentry_drone.cpp  station_keeper.cpp  void_reaver.cpp  xytomorph.cpp
src/pages/: index.astro
src/quests/: getting_airborne.cpp  hauler_b.cpp  hauler_c.cpp  hauler_d.cpp  missing_hauler.cpp  stellar_signal_beacon.cpp  stellar_signal_conclave_probe.cpp  stellar_signal_echoes.cpp  stellar_signal_hook.cpp  stellar_signal_return.cpp  stellar_signal_siege.cpp
src/scenarios/: stage4_hostility.cpp
tools/: ansi_to_html.py  depth_test.sh  overworld_mockup.html  overworld_mockup.py  overworld_mockup_v1.py  overworld_mockup_v3.py
(+64 files in other folders)
